#383: Static import toList and toSet.
And replace emptySet with Set.of().